2004-09-19  Zoltan Varga  <vargaz@freemail.hu>

	* PortableExecutableKind.cs ImageFileMachine.cs: Make this internal
	under 1.0.

	* MemberInfo.cs ParameterInfo.cs: Add MetadataToken property.

	* Module.cs: Add ModuleHandle property and new icalls.

2004-09-18  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Add net 2.0 Mvid property.

2004-08-30  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Added internal Demand(PermissionSet) for CAS.

2004-08-30  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs (GetMethodFromHandle): Avoid passing a valuetype to
	icalls.

2004-08-29  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs (GetMethodFromHandle): Implement.

2004-08-13  Marek Safar  <marek.safar@seznam.cz>

	* Assembly.cs: Made _minimum, _optional, _refuse fields internal.
	To be reusable by AssemblyBuilder.

2004-08-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Fixed some exceptions in NET_1_1 and added some 2.0
	properties (required for compiling the new unit tests).
	* PortableExecutableKind.cs: New. Flags for NET_2_0.
	* ImageFileMachine.cs: New. (Rather limited) enum for NET_2_0.

2004-08-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Get default evidences when no evidences have been 
	supplied. Added internal methods for CAS.
	* AssemblyName.cs: New constructor for NET_2_0.

2004-08-05  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Added new fields for CAS to match the runtime (v23).

2004-07-29  Martin Baulig  <martin@ximian.com>

	* Module.cs (Mono_GetGuid): Make this static.

Sat Jul 10 15:48:34 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* Module.cs: return just name in ToString (bug #61287).

2004-07-03  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Initialize FilterTypeName[IgnoreCase]. Fixes #61048.

2004-06-17  Gert Driesen <drieseng@users.sourceforge.net>

	* Pointer.cs: remove serializable attribute to match MS.NET

2004-06-17  Gert Driesen <drieseng@users.sourceforge.net>
	